--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
   }
 
+body {
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
+}
+
 .mainTitle {
     font-size: 25px !important;
     font-family: 'Lobster', cursive;
@@ -92,7 +97,7 @@ body {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.quantity-control button {
+.quantity-control button, .quantity-control a {
     background-color: #4a5568;
     color: white;
     border: none;
@@ -139,37 +144,37 @@ body {
     overflow: hidden;
 }
 
-.actions a {
+.action-link {
     margin-right: 5px;
     padding: 5px 10px;
     border-radius: 5px;
     transition: background-color 0.3s, color 0.3s;
 }
 
-.actions .pump-btn {
+.pump-btn {
     background-color: #4CAF50;
     color: white;
 }
 
-.actions .pump-btn:hover {
+.pump-btn:hover {
     background-color: #45a049;
 }
 
-.actions .edit-btn {
+.edit-btn {
     background-color: #008CBA;
     color: white;
 }
 
-.actions .edit-btn:hover {
+.edit-btn:hover {
     background-color: #007bb5;
 }
 
-.actions .dump-btn {
+.dump-btn {
     background-color: #f44336;
     color: white;
 }
 
-.actions .dump-btn:hover {
+.dump-btn:hover {
     background-color: #da190b;
 }
 
@@ -475,4 +480,139 @@ input[type="tel"] {
 .homelink:hover {
     color: #16a2ff;
     text-decoration: none;
+}
+
+.underlined {
+    text-decoration: underline;
+}
+
+.underlined:hover {
+    text-decoration: none;
+}
+.top-create-drink-container {
+    padding: 20px;
+    border-radius: 40px;
+}
+
+.top-create-drink-container h1 {
+    padding-top: 20px;
+}
+
+
+.drink-create-container {
+    border-radius: 40px;
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    max-width: 900px;
+}
+
+.drink-create-container img {
+    margin-top: 10px;
+    padding: 10px;
+    border: #0084ff 1px solid;
+    box-shadow: inset 0 0 4px rgb(0, 0, 0, 0.5);
+    max-width: 150px;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 12px;
+}
+
+.custom-file-upload {
+    display: inline-block;
+    padding: 10px 10px;
+    border-radius: 20px;
+    background-color: #0084ff;
+    font-weight: 800;
+    color: white;
+    border: 1px solid white;
+    cursor: pointer;
+    margin-bottom: 10px;
+    margin: 10px 10px 0 10px;
+    text-align: center;
+}
+
+.custom-file-upload:hover {
+    background-color: #2b6cb0;
+    transition: .3s;
+}
+
+#image-upload {
+    display: none;
+}
+
+.drink-create-container p {
+    text-align: center;
+    padding: 0 10px 0 10px;
+    font-size: 10pt;
+    max-width: 100%;
+}
+
+.drink-create-logo {
+    padding: 20px;
+    border-radius: 20px;
+    background: rgb(243,244,246);
+}
+
+.drink-info-create-container {
+    border-radius: 20px;
+}
+
+.drink-info-create-container label {
+    padding: 10px;
+    background-color: #0084ff;
+    color: white;
+    font-weight: 800;
+    border-radius: 10px;
+    text-align: center;
+    margin: 20px 0px 0px 20px;
+}
+
+.drink-info-create-container input {
+    padding: 10px;
+    color: #0084ff;
+    font-weight: 800;
+    border-radius: 10px;
+    text-align: center;
+    margin: 20px 20px 0px 0px;
+    max-height: 40px;
+}
+
+
+.drink-create-submitbtn {
+    padding: 10px 40px 10px 40px ;
+    border-radius: 20px;
+    background-color: #0084ff;
+    font-weight: 800;
+    color: white;
+    border: white 1px solid;
+    margin-bottom: 10px;
+    margin: 10px 10px 0 10px;
+}
+
+.drink-create-submitbtn:hover {
+    background-color: #2b6cb0;
+    transition: .3s;
+}
+
+.drink-create-item {
+    margin-bottom: 20px;
+}
+
+.gap-10 {
+    gap: 40px;
+}
+
+.spacer {
+    background-color: #5f5f5fa6;
+    height: 20px;
+    width: 2px;
+    margin-right: 5px;
+}
+
+.action-row {
+    margin: 0;
+    height: 100%;
 }
